--- a/Bank_Lending.ipynb
+++ b/Bank_Lending.ipynb
@@ -40,7 +40,7 @@
     "import pickle\n",
     "import matplotlib.pyplot as mat\n",
     "import seaborn as sns\n",
-    "train_csv = pd.read_csv(\"/Users/chichi/Downloads/lending_train 2.csv\")\n",
+    "train_csv = pd.read_csv(\"/kaggle/input/capstone-bank-lending-prediction/lending_train.csv")\n",
     "train_csv = train_csv.drop(columns=[\"ID\",\"race\",\"extended_reason\",\"revolving_balance\"])\n",
     "missing_percent = train_csv.isna().sum()*100/len(train_csv)\n",
     "pd.set_option('max_columns', None)\n",
